# p4db

./: .gitignore  ARCH  ARCH_NOTES  ARCH_network_thread  README.md  TODO  a.out  cloudlab_setup.sh  condor.conf  condor_job  conf_client.c  conf_mgr.py  logfile  meson.build  meson_cmd.sh  my_config  new_p4db.p4  periodic.csv  prof_opt  raw_sock.cpp  read_asm  run_test.sh  single_packet.raw  single_test.sh  single_trace.raw  test_pq.cpp  trace  view.py
figures/: read_csv.py  switch_opt.py  switch_optis.R
generator/: AcknowledgedCounterGenerator.java  ConstantIntegerGenerator.java  CounterGenerator.java  DiscreteGenerator.java  ExponentialGenerator.java  FileGenerator.java  Generator.java  Generic.java  HashAnalyzer.java  HistogramGenerator.java  HotspotIntegerGenerator.java  IncrementingPrintableStringGenerator.java  Main.java  Nice.java  NumberGenerator.java  RandomDiscreteTimestampGenerator.java  ScrambledZipfianGenerator.java  SequentialGenerator.java  SkewedLatestGenerator.java  TestGeneric.java  UniformGenerator.java  UniformLongGenerator.java  UnixEpochTimestampGenerator.java  Utils.java  ZipfianGenerator.java  package-info.java
instacart/: analyze.py
logs/: DisjointChecker.java
mine/: conf_mgr.py  run_test.sh  try_batch.py
mine/fast_layout/: .gitignore  Makefile  batch_analysis.cpp  batching_strats.cpp  big_layout_test.cpp  cc_system_test.cpp  distr_layout_test.cpp  get_pass_dist.sh  interval_analysis.cpp  layout_test.cpp  lookahead.cpp  lookahead_batching.cpp  lookahead_batching_old.cpp  my_batching.cpp  nobatch_system_test.cpp  pass_ct_test.cpp  prod_trace.cpp  thread_batching.cxx
mine/sim/: README  consts.h  execute.h  make.sh  node.cpp  node.h  raar  report  run.sh  sim  sim.cpp  txn.cpp  txn.h
src/: TODO  main.cpp  meson.build
src/benchmarks/: benchmarks.hpp  meson.build
src/comm/: buffer.hpp  comm.hpp  dpdk.cpp  dpdk.hpp  meson.build  msg.hpp  msg_handler.cpp  msg_handler.hpp  server.hpp  switch_intf.cpp  switch_intf.hpp  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
src/db/: config.cpp  database.hpp  defs.hpp  future.hpp  mempools.hpp  transaction.hpp  undolog.cpp  util.cpp
src/declustered_layout/: Makefile  declustered_layout.cpp  declustered_layout.hpp  raar  switch_simulator.cpp  test.cpp  transaction.hpp
src/dpdk_lib/: dpdk.cpp  dpdk.hpp  meson.build
src/ee/: args.hpp  database.cpp  database.hpp  defs.hpp  executor.cpp  executor.cxx  executor.hpp  future.hpp  hot_cold.cpp  hot_period.cpp  loc_info.hpp  meson.build  old_hot_period.cpp  orig_defs.hxx  partition.hpp  reg_defs.hxx  row.hpp  sched.cpp  sched.hpp  sched_intf.cpp  soft_hard.cxx  switch.cpp  switch.hpp  switch_intf.cpp  table.hpp  transaction.hpp  txn_iterator.cpp  types.hpp  undolog.cpp  undolog.hpp
src/ee/cc_schemes/: no_wait.hpp  none.hpp  wait_die.hpp
src/fast_layout/: .gitignore  Makefile  batch_analysis.cpp  get_num_ops_dist.sh  get_pass_dist.sh  layout_test.cpp  (+4 more)
switch_src/: .gitignore  dumb_codegen.py  dumb_p4db_3.p4  make.sh  my_p4db.p4  switch_emu  switch_emu.cpp
tests/: Makefile  layout.cpp  run_test.sh
txn_sched/: make.sh  old_stuff.txt  run_sched.sh  sched  sched.cpp  server.cpp
(+69 files in other folders)
