project_headers += files(
	'args.hpp',
    'database.hpp',
    'defs.hpp',
    'errors.hpp',
    'future.hpp',
	'loc_info.hpp',
	'table.hpp',
    'executor.hpp',
	'row.hpp',
    'types.hpp',
	'partition.hpp',
    'undolog.hpp',
	'switch.hpp',
)


project_sources += files (
    'undolog.cpp',
	'switch.cpp',
	'hot_cold.cpp',
    'executor.cpp',
	'sched.cpp',
	'sched_intf.cpp',
)
